...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:text="Create Account"
            android:textSize="16sp"
            android:layout_marginBottom="16dp"/>

...
